force-app/main/default/objects/skilljar__Plan_Enrollment__c/skilljar__Plan_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Plan Enrollment</label>
    <nameField>
        <label>Plan Enrollment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>