force-app/main/default/objects/skilljar__Plan_Enrollment__c/fields/skilljar__Code_Used__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Code_Used__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code Used</label>
    <referenceTo>skilljar__Promo_Code__c</referenceTo>
    <relationshipLabel>Plan Enrollments</relationshipLabel>
    <relationshipName>Plan_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>