force-app/main/default/objects/skilljar__Plan_Enrollment__c/fields/skilljar__Plan__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Plan__c</fullName>
    <label>Plan</label>
    <referenceTo>skilljar__Plan__c</referenceTo>
    <relationshipLabel>Plan Enrollments</relationshipLabel>
    <relationshipName>Plan_Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>