force-app/main/default/objects/skilljar__Plan_Enrollment__c/fields/skilljar__Purchase__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Purchase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase</label>
    <referenceTo>skilljar__Purchase__c</referenceTo>
    <relationshipLabel>Plan Enrollments</relationshipLabel>
    <relationshipName>Plan_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>