force-app/main/default/objects/skilljar__Plan_Enrollment__c/fields/skilljar__Student__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Student__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Student</label>
    <referenceTo>skilljar__Student__c</referenceTo>
    <relationshipLabel>Plan Enrollments</relationshipLabel>
    <relationshipName>Plan_Enrollments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>